Mettre en place un référenciel de tag (#321)
* feat(dataset): Adding category on Dataset

link #96

---------

Co-authored-by: d.le-garrec <d.le-garrec@groupeonepoint.com>